[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kudocli"
version = "0.1.0"
description = "KudoCli: Análise OSINT de atletas Strava"
authors = [
    { name = "Sarah Lima", email = "seu-email@exemplo.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rich>=13.0.0",
    "stravalib>=0.10.4",
    "python-dotenv>=1.0.0",
    "requests>=2.28.0"
]

[project.scripts]
kudo = "main:main"
